--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy==1.26.2
 matplotlib==3.8.0
 seaborn==0.13.2
 plotly==5.17.0
-scipy==1.12.2
+scipy
 fredapi==0.5.2
 pyngrok==6.0.1
 hurst==0.0.5
