--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ numpy==1.26.2
 matplotlib==3.8.0
 seaborn==0.13.2
 plotly==5.17.0
-scipy
+cipy>=1.15,<2.0
 fredapi==0.5.2
-pyngrok==6.0.1
 hurst==0.0.5
