--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-streamlit==1.25.0
-yfinance==0.2.25
-pandas==2.0.3
-numpy==1.26.2
-matplotlib==3.8.0
-seaborn==0.13.2
-plotly==5.17.0
-Scipy>=1.15,<2.0
-fredapi==0.5.2
-hurst==0.0.5
+streamlit
+yfinance
+pandas
+numpy
+scipy
+matplotlib
+seaborn
+plotly
+fredapi
+pyngrok
+statsmodels
+hurst
